# oac-tree-gui

./: .clang-format  .clang-tidy  CMakeLists.txt  ChangeLog  MainWindow.cpp  MainWindow.h  README.md  Readme.md  TestModel.cpp  TestModel.h  main.cpp  pom.xml
source/: CMakeLists.txt  main.cpp
source/anyvalue-editor/: CMakeLists.txt
source/anyvalueeditor/: CMakeLists.txt  main.cpp
source/libsup-gui-core/: CMakeLists.txt
source/sequencer-gui/: CMakeLists.txt  main.cpp
source/sequencergui/: CMakeLists.txt
source/sup-pvmonitor/: CMakeLists.txt
test/: .clang-tidy  CMakeLists.txt  README.md
test/libtest-utils/: CMakeLists.txt
test/parasoft/: CMakeLists.txt
test/resources/: mirror_cleaning.xml
test/testanyvalue-editor-core/: CMakeLists.txt  anyvalue_editor_actions_tests.cpp
test/testoac-tree-gui-components/: CMakeLists.txt  align_node_tests.cpp  align_utils_tests.cpp  attribute_editor_action_handler_tests.cpp  breakpoint_controller_tests.cpp  breakpoint_helper_tests.cpp  connectable_instruction_adapter_tests.cpp  connectable_instruction_adapter_v2_tests.cpp  connectable_shape_factory_tests.cpp  custom_children_strategies_tests.cpp  custom_presentation_item_tests.cpp  custom_row_strategies_tests.cpp  custom_viewitem_factory_tests.cpp  domain_event_dispatcher_tests.cpp  domain_event_helper_tests.cpp  domain_event_queue_tests.cpp  domain_events_tests.cpp  domain_job_observer_tests.cpp  drag_and_drop_helper_tests.cpp  graphics_scene_action_handler_tests.cpp  graphics_scene_style_tests.cpp  graphics_view_style_tests.cpp  instruction_copy_helper_tests.cpp  instruction_editor_action_handler_copypaste_tests.cpp  instruction_editor_action_handler_tests.cpp  instruction_editor_action_handler_undo_tests.cpp  instruction_editor_viewmodel_tests.cpp  instruction_operation_viewmodel_tests.cpp  instruction_toolkit_viewmodel_tests.cpp  job_list_viewmodel_tests.cpp  job_log_severity_tests.cpp  job_log_tests.cpp  job_log_viewmodel_tests.cpp  job_manager_tests.cpp  job_utils_tests.cpp  json_style_factory_tests.cpp  log_event_tests.cpp  main.cpp  monitor_model_tests.cpp  operation_action_helper_tests.cpp  (+24 more)
test/testoac-tree-gui-components-app/: CMakeLists.txt  connectable_view_map_tests.cpp  connectable_view_model_controller_tests.cpp  connecyable_view_model_controller_tests.cpp  domain_job_service_tests.cpp  domain_workspace_listener_pvaccess_tests.cpp  domain_workspace_listener_tests.cpp  graphics_scene_component_provider_scene_tests.cpp  graphics_scene_component_provider_tests.cpp  graphics_scene_controller_tests.cpp  graphics_scene_tests.cpp  instruction_tree_expand_controller_tests.cpp  job_manager_extended_tests.cpp  local_domain_runner_tests.cpp  local_job_handler_tests.cpp  main.cpp  node_graphics_scene_tests.cpp  node_graphics_scene_v2_tests.cpp  operation_action_handler_extended_tests.cpp  operation_action_handler_tests.cpp  plugin_settings_text_controller_tests.cpp  resource_folder_tests.cpp  sequencer_align_utils_tests.cpp  text_edit_controller_tests.cpp  tooltip_helper_tests.cpp  user_choice_provider_tests.cpp  user_input_provider_tests.cpp  workspace_synchronizer_tests.cpp  workspace_view_component_provider_tests.cpp
test/testoac-tree-gui-core/: CMakeLists.txt  anyvalue_item_transform_helper_tests.cpp  application_models_tests.cpp  attribute_item_transform_helper_tests.cpp  domain_automation_helper_tests.cpp  domain_constants_tests.cpp  domain_helper_tests.cpp  domain_library_loader_tests.cpp  domain_loader_dummy.cpp  domain_object_group_helper_tests.cpp  domain_object_type_registry_tests.cpp  domain_plugin_service_tests.cpp  domain_procedure_builder_tests.cpp  domain_utils_tests.cpp  domain_workspace_builder_tests.cpp  epics_instruction_items_tests.cpp  exceptions_tests.cpp  factory_tests.cpp  instruction_container_item_tests.cpp  instruction_info_item_tests.cpp  instruction_item_tests.cpp  instruction_item_transform_helper_tests.cpp  instruction_status_tests.cpp  iterate_helper_tests.cpp  job_item_tests.cpp  job_model_tests.cpp  main.cpp  plugin_settings_item_tests.cpp  procedure_item_job_info_builder_tests.cpp  procedure_item_tests.cpp  procedure_item_transform_helper_tests.cpp  procedure_preamble_items_tests.cpp  runner_status_tests.cpp  sequencer_item_helper_tests.cpp  sequencer_items_tests.cpp  sequencer_model_tests.cpp  sequencer_settings_helper_tests.cpp  sequencer_settings_model_tests.cpp  standard_instruction_items_tests.cpp  standard_job_items_tests.cpp  (+13 more)
test/testoac-tree-gui-integration/: CMakeLists.txt  domain_workspace_listener_softioc_tests.cpp  global_ioc_environment.cpp  job_manager_remote_scenario_tests.cpp  main.cpp  operation_action_handler_remote_scenario_tests.cpp  remote_job_handler_tests.cpp  test_automation_server.cpp  test_automation_server.h  workspace_synchronizer_pvaccess_tests.cpp  workspace_synchronizer_softioc_tests.cpp
test/testoac-tree-gui-views/: CMakeLists.txt  connectable_view_tests.cpp  custom_celleditor_factory_tests.cpp  instruction_editor_actions_tests.cpp  integration_scenario_tests.cpp  job_list_widget_tests.cpp  main.cpp  main_window_helper_tests.cpp  monitor_widget_tests.cpp  procedure_composer_combo_panel_tests.cpp  procedure_list_actions_test.cpp  procedure_list_widget_tests.cpp  procedure_splittable_editor_widget_tests.cpp  sequencer_main_window_context_tests.cpp  splittable_widget_tests.cpp  (+1 more)
tests/: CMakeLists.txt  TestAll.cpp  connectableinstructionadapter.test.cpp  domainobjectbuilder.test.cpp  flowcontroller.test.cpp  folderbasedtest.cpp  folderbasedtest.h  graphicsscene.test.cpp  graphicsscenecontroller.test.cpp  guiobjectbuilder.test.cpp  importutils.test.cpp  instructionitem.test.cpp  instructionitems.test.cpp  instructionviewmodel.test.cpp  jobcontext.test.cpp  jobmanager.test.cpp  procedurerunner.test.cpp  sceneutils.test.cpp  sequenceritems.test.cpp  sequencerobserver.test.cpp  sequencerutils.test.cpp  shallnotbenamedvalueutils.test.cpp  standardinstructionitems.test.cpp  standardvariableitems.test.cpp  test_utils.cpp  test_utils.h  transformfromdomain.test.cpp  usercontroller.test.cpp  workspaceitems.test.cpp
(+3768 files in other folders)
