add_subdirectory(components)
add_subdirectory(composer)
add_subdirectory(core)
add_subdirectory(domain)
add_subdirectory(explorer)
add_subdirectory(jobsystem)
add_subdirectory(mainwindow)
add_subdirectory(model)
add_subdirectory(monitor)
add_subdirectory(nodeeditor)
add_subdirectory(resources)
add_subdirectory(utils)
add_subdirectory(viewmodel)
add_subdirectory(widgets)
add_subdirectory(transform)
