add_subdirectory(components)
add_subdirectory(composer)
add_subdirectory(explorer)
add_subdirectory(jobsystem)
add_subdirectory(mainwindow)
add_subdirectory(monitor)
add_subdirectory(nodeeditor)
add_subdirectory(resources)
add_subdirectory(viewmodel)
add_subdirectory(widgets)
add_subdirectory(pvmonitor)
add_subdirectory(operation)

